Footer portion done

--- a/index.html
+++ b/index.html
@@ -189,5 +189,11 @@
       </section>
     </main>
     <!-- Main End -->
+
+    <!-- Footer part Start-->
+    <footer class="last-part">
+      <p>@All copy right are reserved.</p>
+    </footer>
+    <!-- Footer Part End -->
   </body>
 </html>
